compiler/tests/compile-error/reference-errors.arret
(import [stdlib base])

(def _ nopenopenope)
      ;^^^^^^^^^^^^ ERROR unable to resolve `nopenopenope`

(def _ Str)
      ;^^^ ERROR cannot take the value of a type

(def _ List)
      ;^^^^ ERROR cannot take the value of a type constructor

(def _ ->!)
      ;^^^ ERROR cannot take the value of a purity

(def _ fn)
      ;^^ ERROR cannot take the value of a primitive

(def _ (let [x x]))
              ;^ ERROR unable to resolve `x`